--- a/package.json
+++ b/package.json
@@ -20,12 +20,16 @@
     "@angular/platform-browser": "~7.1.0",
     "@angular/platform-browser-dynamic": "~7.1.0",
     "@angular/router": "~7.1.0",
+    "bcrypt": "^3.0.2",
+    "body-parser": "^1.18.3",
     "bootstrap": "^4.2.1",
     "core-js": "^2.5.4",
     "express": "^4.16.4",
     "font-awesome": "^4.7.0",
+    "jsonwebtoken": "^8.4.0",
     "mongoose": "^5.4.0",
     "ngx-pipes": "^2.3.6",
+    "node-gyp": "^3.8.0",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
