--- a/package.json
+++ b/package.json
@@ -20,14 +20,18 @@
     "@angular/platform-browser": "~7.1.0",
     "@angular/platform-browser-dynamic": "~7.1.0",
     "@angular/router": "~7.1.0",
+    "@types/jquery": "^3.2.12",
     "bcrypt": "^3.0.2",
     "body-parser": "^1.18.3",
     "bootstrap": "^4.2.1",
     "core-js": "^2.5.4",
     "express": "^4.16.4",
     "font-awesome": "^4.7.0",
+    "jquery": "^3.2.1",
     "jsonwebtoken": "^8.4.0",
+    "moment": "latest",
     "mongoose": "^5.4.0",
+    "ng2-daterangepicker": "^2.0.12",
     "ngx-pipes": "^2.3.6",
     "node-gyp": "^3.8.0",
     "rxjs": "~6.3.3",
