ADD booking creation functionality, ADD handling for edge cases of booking creation

--- a/angular.json
+++ b/angular.json
@@ -29,7 +29,8 @@
             "styles": [
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "src/styles.scss",
-              "node_modules/font-awesome/css/font-awesome.min.css"
+              "node_modules/font-awesome/css/font-awesome.min.css",
+              "node_modules/ngx-toasta/styles/style-bootstrap.css"
             ],
             "scripts": []
           },
