--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "~7.1.0",
     "@angular/platform-browser-dynamic": "~7.1.0",
     "@angular/router": "~7.1.0",
+    "@ng-bootstrap/ng-bootstrap": "^4.0.1",
     "@types/jquery": "^3.2.12",
     "bcrypt": "^3.0.2",
     "body-parser": "^1.18.3",
@@ -33,6 +34,7 @@
     "mongoose": "^5.4.0",
     "ng2-daterangepicker": "^2.0.12",
     "ngx-pipes": "^2.3.6",
+    "ngx-toasta": "^0.1.0",
     "node-gyp": "^3.8.0",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
