--- a/package.json
+++ b/package.json
@@ -1,10 +1,17 @@
 {
-  "name": "frontend",
+  "name": "BSW",
   "version": "0.0.0",
+  "license": "MIT",
+  "engines": {
+    "node": "10.14.0",
+    "npm": "6.5.0"
+  },
   "scripts": {
     "ng": "ng",
-    "start": "ng serve --proxy-config proxy.conf.json",
-    "build": "ng build",
+    "start": "npm run start --prefix server",
+    "start-dev": "ng serve --proxy-config proxy.conf.json",
+    "build": "ng build --prod",
+    "heroku-postbuild": "npm run build",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
