--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "start": "npm run start --prefix server",
     "start-dev": "ng serve --proxy-config proxy.conf.json",
     "build": "ng build --prod",
-    "heroku-postbuild": "npm run build",
+    "heroku-postbuild": "npm run build --aot -prod",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
@@ -20,8 +20,10 @@
   "dependencies": {
     "@agm/core": "^1.0.0-beta.5",
     "@angular/animations": "~7.1.0",
+    "@angular/cli": "~7.1.2",
     "@angular/common": "~7.1.0",
     "@angular/compiler": "~7.1.0",
+    "@angular/compiler-cli": "~7.1.0",
     "@angular/core": "~7.1.0",
     "@angular/forms": "~7.1.0",
     "@angular/platform-browser": "~7.1.0",
@@ -33,6 +35,7 @@
     "body-parser": "^1.18.3",
     "bootstrap": "^4.2.1",
     "core-js": "^2.5.4",
+    "cors": "^2.8.5",
     "express": "^4.16.4",
     "font-awesome": "^4.7.0",
     "jquery": "^3.2.1",
@@ -43,8 +46,10 @@
     "ngx-pipes": "^2.3.6",
     "ngx-toasta": "^0.1.0",
     "node-gyp": "^3.8.0",
+    "path": "^0.12.7",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
+    "typescript": "~3.1.6",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
@@ -57,6 +62,7 @@
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
     "codelyzer": "~4.5.0",
+    "enhanced-resolve": "^4.1.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~3.1.1",
